// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewCreditCardInformation component should renders correctly 1`] = `
<styled.div
  isPLCCModalFlow={false}
>
  <Styled(Col)
    className="rewards_card_logo"
    colSize={
      Object {
        "large": 3,
        "medium": 4,
        "small": 6,
      }
    }
    isPLCCModalFlow={false}
    key="container_header_image"
  >
    <Styled(BodyCopy)
      className="header-image"
      color="text.primary"
      component="div"
      fontFamily="primary"
      fontSize={12}
      fontWeight="regular"
      isPLCCModalFlow={false}
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      tabIndex="0"
      textAlign="left"
    />
  </Styled(Col)>
  <Styled(Col)
    className="rewards_card_instruction"
    colSize={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    key="container_header_text_plcc"
  >
    <Styled(RichText)
      dataLocator="creditCardHeader"
      richTextHtml="<h1>Contact Information</h1>"
    />
  </Styled(Col)>
</styled.div>
`;

exports[`ReviewCreditCardInformation component should renders correctly when no arguments are passed 1`] = `
<styled.div
  isPLCCModalFlow={false}
>
  <Styled(Col)
    className="rewards_card_logo"
    colSize={
      Object {
        "large": 3,
        "medium": 4,
        "small": 6,
      }
    }
    isPLCCModalFlow={false}
    key="container_header_image"
  >
    <Styled(BodyCopy)
      className="header-image"
      color="text.primary"
      component="div"
      fontFamily="primary"
      fontSize={12}
      fontWeight="regular"
      isPLCCModalFlow={false}
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      tabIndex="0"
      textAlign="left"
    />
  </Styled(Col)>
  <Styled(Col)
    className="rewards_card_instruction"
    colSize={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    key="container_header_text_plcc"
  >
    <Styled(RichText)
      dataLocator="creditCardHeader"
      richTextHtml=""
    />
  </Styled(Col)>
</styled.div>
`;
